@@ -2,7 +2,7 @@
 # CHK, CRC32 of reads which passed filtering followed by addition (32bit overflow)
 CHK	09f8b87f	140798ec	2b989f07
 # Summary Numbers. Use `grep ^SN | cut -f 2-` to extract this part.
-SN	raw total sequences:	3
+SN	raw total sequences:	3	# excluding supplementary and secondary reads
 SN	filtered sequences:	0
 SN	sequences:	3
 SN	is sorted:	1
@@ -17,6 +17,7 @@ SN	reads duplicated:	0	# PCR or optical duplicate bit set
 SN	reads MQ0:	0	# mapped and MQ=0
 SN	reads QC failed:	0
 SN	non-primary alignments:	0
+SN	supplementary alignments:	0
 SN	total length:	300	# ignores clipping
 SN	total first fragment length:	100	# ignores clipping
 SN	total last fragment length:	200	# ignores clipping
